# FixEngine

./: CMakeLists.txt  README.md
include/fix/: Application.hpp  Codec.hpp  IConnection.hpp  ITimer.hpp  Message.hpp  MessageStore.hpp  Parser.hpp  Reactor.hpp  Session.hpp  SessionManager.hpp  SessionPool.hpp  definitions.hpp
scripts/: b  boost.cpp
src/: AsioTimer.cpp  CMakeLists.txt  ConnectionAsio.cpp  Message.cpp  Parser.cpp  Reactor.cpp  Session.cpp  SessionManager.cpp  SessionPool.cpp  main.cpp
src/config/: config.json
src/fix/: fix_message.cpp  fix_message.hpp  fix_parser.cpp  fix_parser.hpp  fix_serializer.cpp  fix_serializer.hpp  fix_session.hpp
src/net/: tcp_connection.hpp
src/tests/: t  test_fix_parser.cpp
